--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Submission Dicoding | Tech Store</title>
+        <title>Submission Dicoding | Noval Fatriand</title>
 
         <!-- Hyperlink CSS file -->
         <link rel="stylesheet" href="assets/css/style.css">
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="jumbotron" id="jumbotron">
-                    <h1 class="header-jumbotron">Fatriand Store</h1>
+                    <h1 class="header-jumbotron">Tech Store</h1>
                     <p class="subheader-jumbotron">We Provide a Good Quality Product.</p>
             </div>
             <nav>
